[package]
name = "termuxapi"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/alMukaafih/termuxapi-rs.git"
description = "Termux:Api Wrapper"
license = "MIT OR Apache-2.0"
keywords = ["termux", "termux-api"]

[lib]
name = "termux"

[dependencies]
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
